# nvImageCodec

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Acknowledgements.txt  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.rst  coverity-config.json  pytest.ini
example/: CMakeLists.txt  NOTICE.md  README.md
example/nvimproc/: CMakeLists.txt  command_line_params.h  main.cpp
example/nvimtrans/: CMakeLists.txt  command_line_params.h  main.cpp
example/python/: DICOM-advanced.ipynb  DICOM-pydicom.ipynb  DICOM-transcoding.ipynb  DICOM.ipynb  advanced_multi_image.ipynb  batch_sample.ipynb  code_stream.ipynb  cucim_sample.ipynb  cupy_sample.ipynb  cvcuda_batch_classification.py  cvcuda_sample.ipynb  decode_source.ipynb  icc_profile.ipynb  metadata.ipynb  multi-image.ipynb  nvimgcodec.ipynb  nvimgcodec_transcode.ipynb  sliding_window_tile_cache.ipynb  tensorflow_sample.ipynb  torch.ipynb
extensions/: CMakeLists.txt
extensions/libjpeg_turbo/: CMakeLists.txt  ext_module.cpp  jpeg_handle.cpp  jpeg_handle.h  jpeg_mem.cpp  jpeg_mem.h  jpeg_utils.h  libjpeg_turbo_decoder.cpp  libjpeg_turbo_decoder.h  libjpeg_turbo_ext.cpp  libjpeg_turbo_ext.h
extensions/libtiff/: CMakeLists.txt  error_handling.h  ext_module.cpp  libtiff_decoder.cpp  libtiff_decoder.h  libtiff_ext.cpp  libtiff_ext.h
extensions/nvbmp/: CMakeLists.txt  decoder.cpp  decoder.h  encoder.cpp  encoder.h  exceptions.h  ext_module.cpp  nvbmp_ext.cpp  nvbmp_ext.h
extensions/nvjpeg/: CMakeLists.txt  cuda_decoder.cpp  cuda_decoder.h  cuda_encoder.cpp  cuda_encoder.h  errors_handling.h  exception.cpp  exception.h  ext_module.cpp  hw_decoder.cpp  hw_decoder.h  hw_encoder.cpp  hw_encoder.h  lossless_decoder.cpp  lossless_decoder.h  nvjpeg_ext.cpp  nvjpeg_ext.h  nvjpeg_utils.cpp  nvjpeg_utils.h  type_convert.cpp  type_convert.h
extensions/nvjpeg2k/: CMakeLists.txt  cuda_decoder.cpp  cuda_decoder.h  cuda_encoder.cpp  cuda_encoder.h  error_handling.h  exception.cpp  exception.h  ext_module.cpp  log.h  nvjpeg2k_ext.cpp  nvjpeg2k_ext.h  nvjpeg2k_utils.cpp  nvjpeg2k_utils.h
extensions/nvpnm/: CMakeLists.txt  encoder.cpp  encoder.h  error_handling.h  ext_module.cpp  nvpnm_ext.cpp  nvpnm_ext.h
extensions/nvtiff/: CMakeLists.txt  cuda_decoder.cpp  cuda_decoder.h  cuda_encoder.cpp  cuda_encoder.h  error_handling.h  ext_module.cpp  log.h  metadata_extractor.cpp  metadata_extractor.h  nvtiff_ext.cpp  nvtiff_ext.h  nvtiff_utils.cpp  nvtiff_utils.h
extensions/opencv/: CMakeLists.txt  ext_module.cpp  opencv_decoder.cpp  opencv_decoder.h  opencv_encoder.cpp  opencv_encoder.h  opencv_ext.cpp  opencv_ext.h  opencv_utils.cpp  opencv_utils.h
extensions/utils/: library_version.h  parallel_exec.h  stream_ctx.h
python/: CMakeLists.txt  MANIFEST.in  __init__.py.in  backend.cpp  backend.h  backend_kind.cpp  backend_kind.h  backend_params.cpp  backend_params.h  bundle-wheel.sh  chroma_subsampling.cpp  chroma_subsampling.h  code_stream.cpp  code_stream.h  code_stream_view.cpp  code_stream_view.h  color_spec.cpp  color_spec.h  decode_params.cpp  decode_params.h  decode_source.cpp  decode_source.h  decoder.cpp  decoder.h  dlpack_utils.cpp  dlpack_utils.h  encode_params.cpp  encode_params.h  encoder.cpp  encoder.h  error_handling.cpp  error_handling.h  image.cpp  image.h  image_buffer_kind.cpp  image_buffer_kind.h  jpeg2k_bitstream_type.cpp  jpeg2k_bitstream_type.h  jpeg2k_encode_params.cpp  jpeg2k_encode_params.h  (+27 more)
python/nvidia/: __init__.py
python/tools/: test_bundled_libs.py
src/: CMakeLists.txt  builtin_modules.cpp  builtin_modules.h  code_stream.cpp  code_stream.h  codec.cpp  codec.h  codec_registry.cpp  codec_registry.h  convert.h  debug_messenger.h  decode_state_batch.cpp  decode_state_batch.h  decoder_worker.cpp  decoder_worker.h  default_debug_messenger.h  default_executor.cpp  default_executor.h  device_guard.cpp  device_guard.h  directory_scaner.h  encode_state_batch.cpp  encode_state_batch.h  encoder_worker.cpp  encoder_worker.h  environment.h  exception.cpp  exception.h  file_ext_codec.h  file_io_stream.cpp  file_io_stream.h  host_dev.h  icode_stream.h  icodec.h  icodec_registry.h  idebug_messenger.h  idecode_state.h  idirectory_scaner.h  iencode_state.h  ienvironment.h  (+54 more)
src/dynlink/: CMakeLists.txt  dynlink_cuda.cpp  dynlink_cuda.h  dynlink_nvjpeg.cpp  dynlink_nvjpeg.h  dynlink_nvjpeg2k.cpp  dynlink_nvtiff.cpp  dynlink_nvtiff.h
src/imgproc/: CMakeLists.txt  color_space_conversion_impl.h  convert.h  convert_kernel_gpu.cu  convert_kernel_gpu.h  cuda_utils.h  dev_string.h  device_buffer.cpp  device_buffer.h  device_guard.h  exception.cpp  exception.h  force_inline.h  host_dev.h  int_literals.h  math_util.h  out_of_bound_roi_fill.cpp  out_of_bound_roi_fill.h  pinned_buffer.cpp  pinned_buffer.h  roi.h  sample_format_utils.h  static_switch.h  stream_device.cpp  stream_device.h  surface.h  tuple_helpers.h  type_utils.h  util.h
src/parsers/: bmp.cpp  bmp.h  byte_io.h  exif.cpp  exif.h  exif_orientation.h  jpeg.cpp  jpeg.h  jpeg2k.cpp  jpeg2k.h  parsers_ext_module.cpp  parsers_ext_module.h  png.cpp  png.h  pnm.cpp  pnm.h  tiff.cpp  tiff.h  webp.cpp  webp.h
test/: CMakeLists.txt  code_stream_test.cpp  codec_registry_test.cpp  codec_test.cpp  decoder_worker_test.cpp  device_guard_test.cpp  encoder_worker_test.cpp  library_version_test.cpp  mock_codec.h  mock_codec_registry.h  mock_directory_scaner.h  mock_environment.h  mock_executor.h  mock_image_decoder.h  mock_image_decoder_factory.h  mock_image_encoder.h  mock_image_encoder_factory.h  mock_image_parser.h  mock_image_parser_factory.h  mock_iostream_factory.h  mock_library_loader.h  mock_logger.h  nvimgcodec_tests.cpp  nvimgcodec_tests.h  plugin_framework_test.cpp  processing_results_test.cpp  requirements_lnx_cu11.txt  requirements_lnx_cu12.txt  requirements_lnx_cu13.txt  requirements_win_cu11.txt  requirements_win_cu12.txt  requirements_win_cu13.txt  test.bat  test.sh  test_transcode.py  test_utils.cpp  test_utils.h  thread_pool_test.cpp
test/api/: api_mismatch_test.cpp  api_negative_test.cpp  can_de_en_code_common.h  can_decode_test.cpp  can_encode_test.cpp  (+2 more)
(+296 files in other folders)
